CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

SET(TUNGL_VERSION_API		"0")
SET(TUNGL_VERSION_STABLE	"1")
SET(TUNGL_VERSION_MAJOR		"2")
SET(TUNGL_VERSION_MINOR		"1")
SET(TUNGL_VERSION_CMAKE		"${TUNGL_VERSION_STABLE}.${TUNGL_VERSION_MAJOR}.${TUNGL_VERSION_MINOR}")

PROJECT(TUNGL VERSION "${TUNGL_VERSION_CMAKE}" LANGUAGES C CXX)

SET(CMAKE_C_STANDARD 17)
SET(CMAKE_C_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE RELEASE CACHE STRING "" FORCE)
ENDIF()

SET(CMAKE_INSTALL_RPATH "\$ORIGIN")
IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT OR NOT CMAKE_INSTALL_PREFIX)
	SET(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/../install" CACHE PATH "CMAKE install path" FORCE)
ENDIF()

## Build Tungl -----------------------------------------------------------------
INCLUDE(${CMAKE_CURRENT_LIST_DIR}/include/CMakeLists.txt)
ADD_SUBDIRECTORY(src)

OPTION(WITH_TESTS "Enable tests" OFF)
IF(WITH_TESTS)
	ADD_SUBDIRECTORY(tests)
ENDIF()