CMAKE_MINIMUM_REQUIRED(VERSION 3.12) # requires new FindPython3

PROJECT(Tungl VERSION 0.1.4 LANGUAGES C CXX)

FIND_PACKAGE(Illyrian 0.2.0 REQUIRED)
ILLYRIAN_PROJECT(
	C_STANDARD		17
	CXX_STANDARD	17
	INSTALL_PREFIX "/usr/local/nle/"
)

ILLYRIAN_FIND_PYTHON()

ILLYRIAN_OPTIONS(Tungl_DIST_TYPE LOCAL PYTHON)
IF(Tungl_DIST_TYPE STREQUAL LOCAL)
	SET(Tungl_INSTALL_PATH tungl-${Tungl_VERSION})
	ILLYRIAN_INSTALL_SYMLINK(${Tungl_INSTALL_PATH} tungl DIRECTORY)
ELSEIF(Tungl_DIST_TYPE STREQUAL PYTHON)
	SET(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/dist/" CACHE PATH "CMAKE install path" FORCE)
	SET(Tungl_INSTALL_PATH tungl)
	SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_CLEAN_FILES ${CMAKE_INSTALL_PREFIX})
	ADD_PYTHON_WHEEL(dist ${CMAKE_CURRENT_LIST_DIR}/tungl.json)
ELSE()
	MESSAGE(FATAL_ERROR "Invalid Tungl_DIST_TYPE: ${Tungl_DIST_TYPE}")
ENDIF()

ILLYRIAN_INSTALL_FIND_BEGIN		(Tungl PYTHON_NAME tungl FILE "include/tungl/version.h" PATHS "/usr/local/nle/")
ILLYRIAN_INSTALL_FIND_REQUIRED	(LIBRARY Tungl LIBRARY "libtungl.so" "lubtungl.a" PATHS "\${Tungl_DIR}/lib64")
ILLYRIAN_INSTALL_FIND_REQUIRED	(FILE Tungl SRC "tungl.cpp" PATHS "\${Tungl_DIR}/src/tungl")
ILLYRIAN_INSTALL_FIND_SET		(Tungl INCLUDE_DIRS "\${Tungl_DIR}/include" CACHE STRING "Tungl include dir")
ILLYRIAN_INSTALL_FIND_END		(Tungl
	VERSION_FILE "\${Tungl_INCLUDE_DIRS}/tungl/version.h"
	VERSION_REGEX "\\\"([0-9\.]+)\\\""
	DESTINATION ${Tungl_INSTALL_PATH}/cmake
)

# Code -------------------------------------------------------------------------
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/src)
ADD_SUBDIRECTORY(src/tungl)

OPTION(Tungl_WITH_TESTS "Enable tests" OFF)
IF(Tungl_WITH_TESTS)
	ADD_SUBDIRECTORY(tests)
ENDIF()

IF(Tungl_DIST_TYPE STREQUAL PYTHON)
	ADD_SUBDIRECTORY(python/tungl)
ENDIF()

INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/LICENSE DESTINATION ${Tungl_INSTALL_PATH})
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/README.md DESTINATION ${Tungl_INSTALL_PATH})