CONFIGURE_FILE(${CMAKE_CURRENT_LIST_DIR}/version.h.in ${CMAKE_CURRENT_BINARY_DIR}/version.h)

INSTALL(FILES
	${CMAKE_CURRENT_BINARY_DIR}/version.h
	${CMAKE_CURRENT_LIST_DIR}/colors.h
	${CMAKE_CURRENT_LIST_DIR}/config.h
	${CMAKE_CURRENT_LIST_DIR}/macros.h
	${CMAKE_CURRENT_LIST_DIR}/macros.hpp
	${CMAKE_CURRENT_LIST_DIR}/tungl.h
	DESTINATION include/tungl
)
