CONFIGURE_FILE(${CMAKE_CURRENT_LIST_DIR}/version.h.in ${CMAKE_CURRENT_BINARY_DIR}/version.h @ONLY)

ILLYRIAN_OPTIONS		(Tungl_BUILD_TYPE SHARED STATIC)
ADD_LIBRARY				(tungl ${Tungl_BUILD_TYPE} ${CMAKE_CURRENT_LIST_DIR}/tungl.cpp)
ILLYRIAN_TARGET_OPTIONS	(tungl
	${Tungl_DIST_TYPE}
	COMPILER_OPTIONS -fPIC
	SOVERSION	${Tungl_VERSION}
	DESTINATION	${Tungl_INSTALL_PATH}/lib64
)

INSTALL(FILES
	${CMAKE_CURRENT_BINARY_DIR}/version.h
	${CMAKE_CURRENT_LIST_DIR}/api.h
	${CMAKE_CURRENT_LIST_DIR}/c.h
	${CMAKE_CURRENT_LIST_DIR}/colors.h
	${CMAKE_CURRENT_LIST_DIR}/config.h
	${CMAKE_CURRENT_LIST_DIR}/cxx.h
	${CMAKE_CURRENT_LIST_DIR}/types.h
	DESTINATION ${Tungl_INSTALL_PATH}/include/tungl
)

INSTALL(FILES
	${CMAKE_CURRENT_LIST_DIR}/tungl.cpp
	DESTINATION ${Tungl_INSTALL_PATH}/src/tungl
)